HTML page script refactoring (#2162)
* Move some common functionality

* Move setupEnvironmentInfo into ExtensionContentController

* Move background/environment.js to extension/environment.js

--- a/ext/legal.html
+++ b/ext/legal.html
@@ -153,6 +153,8 @@ THE SOFTWARE.
 
 <!-- Scripts -->
 <script src="/js/dom/document-focus-controller.js"></script>
+<script src="/js/extension/environment.js"></script>
+<script src="/js/pages/common/extension-content-controller.js"></script>
 
 <script src="/js/pages/generic-page-main.js"></script>
 
