--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -280,6 +280,8 @@
 <script src="/js/dom/panel-element.js"></script>
 <script src="/js/dom/popup-menu.js"></script>
 <script src="/js/dom/selector-observer.js"></script>
+<script src="/js/extension/environment.js"></script>
+<script src="/js/pages/common/extension-content-controller.js"></script>
 <script src="/js/pages/settings/modal.js"></script>
 <script src="/js/pages/settings/modal-controller.js"></script>
 <script src="/js/pages/settings/permissions-origin-controller.js"></script>
