--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -401,12 +401,14 @@
 <script src="/js/dom/panel-element.js"></script>
 <script src="/js/dom/popup-menu.js"></script>
 <script src="/js/dom/selector-observer.js"></script>
+<script src="/js/extension/environment.js"></script>
 <script src="/js/general/cache-map.js"></script>
 <script src="/js/general/object-property-accessor.js"></script>
 <script src="/js/general/task-accumulator.js"></script>
 <script src="/js/input/hotkey-util.js"></script>
 <script src="/js/language/dictionary-importer-media-loader.js"></script>
 <script src="/js/language/dictionary-worker.js"></script>
+<script src="/js/pages/common/extension-content-controller.js"></script>
 <script src="/js/pages/settings/dictionary-controller.js"></script>
 <script src="/js/pages/settings/dictionary-import-controller.js"></script>
 <script src="/js/pages/settings/generic-setting-controller.js"></script>
