Rename anki.js to anki-connect.js to more accurately reflect class name (#2167)

--- a/ext/background.html
+++ b/ext/background.html
@@ -28,7 +28,7 @@
 <script src="/js/background/profile-conditions-util.js"></script>
 <script src="/js/background/request-builder.js"></script>
 <script src="/js/background/script-manager.js"></script>
-<script src="/js/comm/anki.js"></script>
+<script src="/js/comm/anki-connect.js"></script>
 <script src="/js/comm/clipboard-monitor.js"></script>
 <script src="/js/comm/clipboard-reader.js"></script>
 <script src="/js/comm/mecab.js"></script>
