--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3656,7 +3656,7 @@
 
 <script src="/js/yomichan.js"></script>
 
-<script src="/js/comm/anki.js"></script>
+<script src="/js/comm/anki-connect.js"></script>
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
 <script src="/js/data/anki-note-builder.js"></script>
