Add support for Anki API key (#2169)
* Update material.css to support password fields

* Support password

* Add "apiKey" setting

* Use apiKey

* Update options if API key changes

* Update tests

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1653,6 +1653,15 @@
                 >
             </div>
         </div></div>
+        <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">API key</div>
+                <div class="settings-item-description">Pass a secret value to AnkiConnect API calls.</div>
+            </div>
+            <div class="settings-item-right">
+                <input type="password" placeholder="Disabled" spellcheck="false" autocomplete="off" data-setting="anki.apiKey" id="anki-api-key-input">
+            </div>
+        </div></div>
         <div class="settings-item advanced-only">
             <div class="settings-item-inner">
                 <div class="settings-item-left">
