Audio download timeout (#2187)
* Add support for an idle timeout when downloading audio

* Update eslint rules

* Pass idleTimeout to the downloader from DisplayAnki

* Add anki.downloadTimeout setting

* Update tests

* Assign _audioDownloadIdleTimeout using settings

* Show info about cancelled downloads

* Handle Firefox bug

* Improve audio errors

* Refactor

* Move functions to RequestBuilder

--- a/ext/issues.html
+++ b/ext/issues.html
@@ -42,6 +42,18 @@
         </div></div></div></div>
     </div>
 
+    <h2 id="audio-download-idle-timeout">Audio download was cancelled due to an idle timeout</h2>
+    <div class="settings-group">
+        <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
+            <p>
+                Audio files can be downloaded from remote servers when creating Anki cards,
+                and sometimes these downloads can stall due to server or internet connectivity issues.
+                The <em>Idle download timeout</em> setting on the <a href="/settings.html#!anki">settings page</a>
+                specifies a time limit for stalled downloads.
+            </p>
+        </div></div></div></div>
+    </div>
+
     <div class="footer-padding"></div>
 
 </div>
