--- a/ext/popup-preview.html
+++ b/ext/popup-preview.html
@@ -50,6 +50,7 @@
 <script src="/js/comm/frame-ancestry-handler.js"></script>
 <script src="/js/comm/frame-client.js"></script>
 <script src="/js/comm/frame-offset-forwarder.js"></script>
+<script src="/js/data/sandbox/string-util.js"></script>
 <script src="/js/dom/document-util.js"></script>
 <script src="/js/dom/dom-text-scanner.js"></script>
 <script src="/js/dom/text-source-element.js"></script>
