--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -157,7 +157,9 @@
 <template id="kanji-info-table-item-template"><tr class="kanji-info-table-item"><th class="kanji-info-table-item-header"></th><td class="kanji-info-table-item-value"></td></tr></template>
 <template id="kanji-info-table-empty-template"><tr class="kanji-info-table-item kanji-info-table-item-empty"><td class="kanji-info-table-item-value-empty">No data found</td></tr></template>
 <template id="kanji-gloss-item-template"><li class="kanji-gloss-item"><span class="kanji-gloss-content"></span></li></template>
+<!-- [html-validate-disable element-required-ancestor] -->
 <template id="kanji-reading-template"><dd class="kanji-reading"></dd></template>
+<!-- [html-validate-enable element-required-ancestor] -->
 
 <!-- Tag templates -->
 <template id="tag-template"><span class="tag"><span class="tag-label"><span class="tag-label-content"></span></span></span></template>
