--- a/ext/background.html
+++ b/ext/background.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
+    <link rel="stylesheet" type="text/css" href="/css/background.css">
 </head>
 <body>
 
@@ -61,7 +62,7 @@
     https://bugzilla.mozilla.org/show_bug.cgi?id=1603985
 -->
 <!-- [html-validate-disable close-order] -->
-<div id="clipboard-image-paste-target" contenteditable="true">
+<div id="clipboard-rich-content-paste-target" contenteditable="true">
 
 </body>
 </html>
