fix missed kana yomichan -> yomitan

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1516,7 +1516,7 @@
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
             <div class="settings-item-left">
                 <div class="settings-item-label">Convert half width characters to full width</div>
-                <div class="settings-item-description" lang="ja">ﾖﾐﾁｬﾝ&#x3000;&rarr;&#x3000;ヨミチャン</div>
+                <div class="settings-item-description" lang="ja">ﾖﾐﾀﾝ&#x3000;&rarr;&#x3000;ヨミタン</div>
             </div>
             <div class="settings-item-right">
                 <select data-setting="translation.convertHalfWidthCharacters">
