Renamed most instances of Yomichan -> yomitan under ext/*.html

--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Action Popup</title>
+    <title>Yomitan Action Popup</title>
     <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
     <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
@@ -55,7 +55,7 @@
 </div>
 
 <div id="full">
-    <h3 id="extension-info">Yomichan</h3>
+    <h3 id="extension-info">Yomitan</h3>
     <label class="link-group">
         <span class="link-group-icon"><input type="checkbox" id="enable-search2"></span><span class="link-group-label">Enable content scanning</span>
     </label>
