--- a/ext/info.html
+++ b/ext/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Info</title>
+    <title>Yomitan Info</title>
     <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
     <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
@@ -23,7 +23,7 @@
 
     <span tabindex="-1" id="content-scroll-focus"></span>
 
-    <h1>Yomichan Info</h1>
+    <h1>Yomitan Info</h1>
 
     <h2 id="general">General</h2>
     <div class="settings-group">
@@ -45,9 +45,9 @@
     <div class="settings-group">
         <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
             <ul>
-                <li>Information and downloadable dictionaries: <a href="https://foosoft.net/projects/yomichan/" rel="noreferrer noopener">Homepage</a></li>
-                <li>Support and source code: <a href="https://github.com/FooSoft/yomichan" rel="noreferrer noopener">Github</a></li>
-                <li>Release notes: <a href="https://github.com/FooSoft/yomichan/releases" rel="noreferrer noopener" data-href-format="https://github.com/FooSoft/yomichan/releases/tag/{version}" id="release-notes-this-version-link">This version</a> | <a href="https://github.com/FooSoft/yomichan/releases" rel="noreferrer noopener">All versions</a></li>
+                <li>Information and downloadable dictionaries: <a href="https://github.com/themoeway/yomitan#yomitan" rel="noreferrer noopener">Homepage</a></li>
+                <li>Support and source code: <a href="https://github.com/themoeway/yomitan" rel="noreferrer noopener">Github</a></li>
+                <li>Release notes: <a href="https://github.com/themoeway/yomitan/releases" rel="noreferrer noopener" data-href-format="https://github.com/themoeway/yomitan/releases/tag/{version}" id="release-notes-this-version-link">This version</a> | <a href="https://github.com/themoeway/yomitan/releases" rel="noreferrer noopener">All versions</a></li>
                 <li>More extension information: <a href="/permissions.html">Permissions</a> | <a href="/legal.html">Licenses</a> | <a href="/issues.html">Issues</a></li>
             </ul>
         </div></div></div></div>
