--- a/ext/issues.html
+++ b/ext/issues.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Issues</title>
+    <title>Yomitan Issues</title>
     <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
     <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
@@ -23,15 +23,15 @@
 
     <span tabindex="-1" id="content-scroll-focus"></span>
 
-    <h1>Yomichan Issues</h1>
+    <h1>Yomitan Issues</h1>
 
     <h2 id="audio-download-failed-permissions-error">Audio download failed due to possible extension permissions error <em>(Chrome)</em></h2>
     <div class="settings-group">
         <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
             <p>
-                Depending on the extension's configuration, Yomichan can sometimes run into issues with
+                Depending on the extension's configuration, Yomitan can sometimes run into issues with
                 downloading audio files while creating Anki cards.
-                This may be due to a permissions issue where Yomichan hasn't been granted access to
+                This may be due to a permissions issue where Yomitan hasn't been granted access to
                 the sites hosting the audio files.
             </p>
             <p>
@@ -48,11 +48,11 @@
             <p>
                 If a website failes to keep its HTTPS certificate up to date,
                 downloads can fail because the browser flags the connection as insecure.
-                This has happened occasionally for some websites that Yomichan interacts with,
+                This has happened occasionally for some websites that Yomitan interacts with,
                 and the issue is usually resolved within a day.
             </p>
             <p>
-                This issue is a server-side issue that Yomichan doesn't have control over.
+                This issue is a server-side issue that Yomitan doesn't have control over.
             </p>
         </div></div></div></div>
     </div>
