--- a/ext/search.html
+++ b/ext/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Search</title>
+    <title>Yomitan Search</title>
     <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
     <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
@@ -30,7 +30,7 @@
 
                     <div class="search-header">
                         <div id="intro">
-                            <h1>Yomichan Search</h1>
+                            <h1>Yomitan Search</h1>
                         </div>
 
                         <div class="scan-disable">
