Updated icon svg and icon name

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -69,7 +69,7 @@
                         This page is taking longer than expected to load.
                     </p>
                     <p data-show-for-browser="safari">
-                        Due to a bug in Safari, it may be necessary to click the <img src="/images/yomichan-icon.svg" class="inline-icon" alt=""> <em>Yomichan</em>
+                        Due to a bug in Safari, it may be necessary to click the <img src="/images/yomitan-icon.svg" class="inline-icon" alt=""> <em>Yomichan</em>
                         button in the browser bar to fully load the page
                     </p>
                 </div>
