minimum viable product

--- a/ext/background.html
+++ b/ext/background.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Background</title>
-    <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
-    <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/icon38.png" sizes="38x38">
-    <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
-    <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
+    <link rel="flag.png" sizes="16x16">
+    <link rel="flag.png" sizes="19x19">
+    <link rel="flag.png" sizes="32x32">
+    <link rel="flag.png" sizes="38x38">
+    <link rel="flag.png" sizes="48x48">
+    <link rel="flag.png" sizes="64x64">
+    <link rel="flag.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/background.css">
 </head>
 <body>
@@ -41,6 +41,7 @@
 <script src="/js/data/sandbox/array-buffer-util.js"></script>
 <script src="/js/dom/native-simple-dom-parser.js"></script>
 <script src="/js/extension/environment.js"></script>
+<script src="/js/general/helpers.js"></script>
 <script src="/js/general/cache-map.js"></script>
 <script src="/js/general/object-property-accessor.js"></script>
 <script src="/js/general/regex-util.js"></script>
@@ -48,7 +49,11 @@
 <script src="/js/language/deinflector.js"></script>
 <script src="/js/language/dictionary-database.js"></script>
 <script src="/js/language/sandbox/dictionary-data-util.js"></script>
+<script src="/js/language/deinflection-ruleset.js"></script>
 <script src="/js/language/sandbox/japanese-util.js"></script>
+<script src="/js/language/language-util.js"></script>
+<script src="/js/language/Japanese.js"></script>
+<script src="/js/language/english/grammar.js"></script>
 <script src="/js/language/translator.js"></script>
 <script src="/js/media/audio-downloader.js"></script>
 <script src="/js/media/media-util.js"></script>
