--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yomichan Action Popup</title>
-    <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
-    <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/icon38.png" sizes="38x38">
-    <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
-    <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
+    <link rel="flag.png" sizes="16x16">
+    <link rel="flag.png" sizes="19x19">
+    <link rel="flag.png" sizes="32x32">
+    <link rel="flag.png" sizes="38x38">
+    <link rel="flag.png" sizes="48x48">
+    <link rel="flag.png" sizes="64x64">
+    <link rel="flag.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/action-popup.css">
 </head>
 <body>
