--- a/ext/settings.html
+++ b/ext/settings.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yomichan Settings</title>
-    <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
-    <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/icon38.png" sizes="38x38">
-    <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
-    <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
+    <link rel="flag.png" sizes="16x16">
+    <link rel="flag.png" sizes="19x19">
+    <link rel="flag.png" sizes="32x32">
+    <link rel="flag.png" sizes="38x38">
+    <link rel="flag.png" sizes="48x48">
+    <link rel="flag.png" sizes="64x64">
+    <link rel="flag.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/material.css">
     <link rel="stylesheet" type="text/css" href="/css/settings.css">
     <link rel="stylesheet" type="text/css" href="/css/display-pronunciation.css">
@@ -572,6 +572,18 @@
             </div>
             <div class="settings-item-right">
                 <input type="number" data-setting="scanning.length" min="1" step="1">
+            </div>
+        </div></div>
+        <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Dictionary search resolution</div>
+                <div class="settings-item-description" lang="en"><p>"A dog"&#x3000;&rarr;&#x3000;search for "A dog","A do", "A d", "A"</p> or <p>"A dog"&#x3000;&rarr;&#x3000;"A dog", "A"</p></div>
+            </div>
+            <div class="settings-item-right">
+                <select data-setting="parsing.searchResolution">
+                    <option value="letter">Letter</option>
+                    <option value="word">Word</option>
+                </select>
             </div>
         </div></div>
         <div class="settings-item advanced-only">
@@ -1588,6 +1600,19 @@
                     <option value="false">Disabled</option>
                     <option value="true">Collapse into single character</option>
                     <option value="full">Remove all characters</option>
+                </select>
+            </div>
+        </div></div>
+        <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Decapitalize latin text</div>
+                <div class="settings-item-description" lang="ja">CAPITALIZED TEXT&#x3000;&rarr;&#x3000;capitalized text</div>
+            </div>
+            <div class="settings-item-right">
+                <select data-setting="translation.decapitalize">
+                    <option value="false">Disabled</option>
+                    <option value="true">Enabled</option>
+                    <option value="variant">Use both variants</option>
                 </select>
             </div>
         </div></div>
