Fix typo in settings.html

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2408,7 +2408,7 @@
         <div class="warning-text margin-above no-dictionaries-installed-warning" hidden>
             No dictionaries have been installed yet.
             Visit the <a href="https://github.com/themoeway/yomitan#dictionaries" target="_blank" rel="noopener noreferrer">Yomitan homepage</a>
-            for a list free dictionaries or click the <em>Import</em> button below to select a dictionary file to import.
+            for a list of free dictionaries or click the <em>Import</em> button below to select a dictionary file to import.
         </div>
         <div id="dictionary-error" class="danger-text margin-above" hidden></div>
         <div id="dictionary-list" class="dictionary-list generic-list" data-count="0">
